
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MSG_DONTWAIT ;
 int close (int) ;
 int exit (int) ;
 int fflush (int ) ;
 int free (char*) ;
 char* malloc (int) ;
 int memset (char*,char,int) ;
 int printf (char*) ;
 int recv (int,char*,int,int) ;
 int stdout ;
 int strlen (char*) ;
 int write (int,char*,int ) ;

void readftp(int stream,int flag){
 if(flag==1) flag=MSG_DONTWAIT;
 else flag=0;
        char *readline=malloc(sizeof(char)*(4096+1));
 memset(readline,'\x00',(4096+1));
        if(recv(stream,readline,4096,flag)<1){
                printf("Can't read from stream\n");
  if(readline) free(readline);
  close(stream);
  exit(1);
 }
 else{
  if(readline)
   write(1, readline, strlen(readline));
  fflush(stdout);
 }
 free(readline);
}
