; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_35061.c_readftp.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_35061.c_readftp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_DONTWAIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Can't read from stream\0A\00", align 1
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @readftp(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 1
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @MSG_DONTWAIT, align 4
  store i32 %9, i32* %4, align 4
  br label %11

10:                                               ; preds = %2
  store i32 0, i32* %4, align 4
  br label %11

11:                                               ; preds = %10, %8
  %12 = call i8* @malloc(i32 4097)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @memset(i8* %13, i8 signext 0, i32 4097)
  %15 = load i32, i32* %3, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @recv(i32 %15, i8* %16, i32 4096, i32 %17)
  %19 = icmp slt i32 %18, 1
  br i1 %19, label %20, label %31

20:                                               ; preds = %11
  %21 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %22 = load i8*, i8** %5, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @free(i8* %25)
  br label %27

27:                                               ; preds = %24, %20
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @close(i32 %28)
  %30 = call i32 @exit(i32 1) #3
  unreachable

31:                                               ; preds = %11
  %32 = load i8*, i8** %5, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %39

34:                                               ; preds = %31
  %35 = load i8*, i8** %5, align 8
  %36 = load i8*, i8** %5, align 8
  %37 = call i32 @strlen(i8* %36)
  %38 = call i32 @write(i32 1, i8* %35, i32 %37)
  br label %39

39:                                               ; preds = %34, %31
  %40 = load i32, i32* @stdout, align 4
  %41 = call i32 @fflush(i32 %40)
  br label %42

42:                                               ; preds = %39
  %43 = load i8*, i8** %5, align 8
  %44 = call i32 @free(i8* %43)
  ret void
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @close(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
